// Vitest Snapshot v1

exports[`ShowSection > should render 1`] = `
"<div class=\\"flex flex-col overflow-x-auto p-2 overflow-y-hidden\\">
  <h1 class=\\"text-2xl font-bold mb-5 sticky left-0 select-none\\">test</h1>
  <!--v-if-->
  <div class=\\"flex flex-row gap-5 p-5 justify-start\\">
    <!--v-if-->
    <show-items-stub shows=\\"\\" nextclicked=\\"false\\" prevclicked=\\"false\\"></show-items-stub>
    <!--v-if-->
  </div>
</div>"
`;

exports[`ShowSection > should render with shows 1`] = `
"<div class=\\"flex flex-col overflow-x-auto p-2 overflow-y-hidden\\">
  <h1 class=\\"text-2xl font-bold mb-5 sticky left-0 select-none\\">test</h1>
  <!--v-if-->
  <div class=\\"flex flex-row gap-5 p-5 justify-start\\">
    <!--v-if-->
    <show-items-stub shows=\\"[object Object]\\" nextclicked=\\"false\\" prevclicked=\\"false\\"></show-items-stub>
    <div data-testid=\\"next\\" class=\\"flex-1 cursor-pointer flex justify-center items-center max-w-[50px] hover:bg-slate-300 hover:bg-opacity-70 transition-colors ease-in-out duration-200 rounded-sm\\">
      <chevron-right-icon-stub class=\\"w-16 h-16 fill-white\\"></chevron-right-icon-stub>
    </div>
  </div>
</div>"
`;
